[metadata]
name=url
version=0.4.3
description = URL parsing, sanitization, and other handy features.
long_description = 
    Some helper functions for parsing URLs, sanitizing them, normalizing   them.
    
    This includes support for escaping, unescaping, punycoding,   unpunycoding, cleaning parameter and query strings, and a little more sanitization.
description-file = README.md
author = Moz, Inc.
author_email = turbo@moz.com
url = http://github.com/seomoz/url-py
license = MIT
platforms = Posix, MacOS X, Windows
classifiers = 
    License :: OSI Approved :: MIT License
    Development Status :: 3 - Alpha
    Environment :: Web Environment
    Intended Audience :: Developers
    Topic :: Internet :: WWW/HTTP
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7


[options]
install_requires =
  six
  cython
tests_require =
  coverage
  rednose
  nose-timer
  nose


[nosetests]
verbosity=2
rednose=1
with-timer=1
exe=0
cover-package=url
cover-branches=1
cover-min-percentage=100
cover-inclusive=1
cover-erase=1
logging-clear-handlers=1
